--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
         <!--                 Про Себе               -->
         <section>
             <h2><center>Про себе</center></h2>
+            З самого малку я захоплювався баскетболом і грав за свою школу на протязі 5 років
+        </section>
+        <section>
+            <form action="https://formspree.io/klamozxc@gmail.com"method="POST">
+                <label for="name">Ім'я</label><br>
+                <input type="text" name="name" id="name"><br>
+                <label for="surname">Прізвище</label><br>
+                <input type="text" name="surname" id="surname"><br>
+                <label for="text">Повідомлення</label><br>
+                <input type="text" name="text" id="text"><br>
+                <input type="submit" name="send" value="Надіслати"><br> 
         </section>
         </article>
         
