--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="uk">
         <title>sample</title>
         <meta charset="utf-8">
         <style>
@@ -26,7 +26,7 @@
         <article>
         <!--               Головна                      -->
         <section>
-            <h1><center>Стегній Сергій</center></h1>
+            <center><h1>Стегній Сергій</h1></center>
             <p>Ім'я</p><p>Сергій</p>
             <p>Дата народження</p><p>7 листопада 1995р.</p>
             <p>Адреса проживання</p><p>Кирила і Мефодія 28/10</p>
@@ -35,7 +35,7 @@
         </section>
         <!--              Досвіт роботи                  -->
         <section>
-            <h2><center>Досвіт роботи</center></h2>
+            <center></center><h2>Досвіт роботи</h2></center>
             <img src="diana-vel.png" alt="diana-bike">
             <img src="diana-dance.png" alt="diana-danve">
             <img src="buka.png" alt="bukovel"><br>
@@ -53,7 +53,7 @@
         </section>
         <!--             Освіта                      -->
         <section>
-            <h2><center>Освіта</center></h2>
+            <center><h2>Освіта</h2></center>
             <img src="picture.png" alt="picture"><br>
             Львівська Лінгвістична Гімназія(ЛЛГ)
             З поглибленим вивченням англійської мови<br>
@@ -69,11 +69,11 @@
         </section>
         <!--                 Про Себе               -->
         <section>
-            <h2><center>Про себе</center></h2>
+            <center><h2>Про себе</h2></center>
             З самого малку я захоплювався баскетболом і грав за свою школу на протязі 5 років
         </section>
         <section>
-            <form action="https://formspree.io/klamozxc@gmail.com"method="POST">
+            <form action="https://formspree.io/klamozxc@gmail.com" method="POST">
                 <label for="name">Ім'я</label><br>
                 <input type="text" name="name" id="name"><br>
                 <label for="surname">Прізвище</label><br>
