--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-    <head lang="uk">
+<html lang="uk">
+    <head>
         <title>sample</title>
         <meta charset="utf-8">
         <style>
@@ -80,7 +80,8 @@
                 <input type="text" name="surname" id="surname"><br>
                 <label for="text">Повідомлення</label><br>
                 <input type="text" name="text" id="text"><br>
-                <input type="submit" name="send" value="Надіслати"><br> 
+                <input type="submit" name="send" value="Надіслати"><br>
+            </form>    
         </section>
         </article>
         
