--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <label for="surname">Прізвище</label><br>
                 <input type="text" name="surname" id="surname"><br>
                 <label for="text">Повідомлення</label><br>
-                <input type="text" name="text" id="text"><br>
+                <textarea name="text" id="text"><br></textarea>
                 <input type="submit" name="send" value="Надіслати"><br>
             </form>    
         </section>
