--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
         <article>
         <section>
-            <center></center><h2>Досвіт роботи</h2></center>
+            <center><h2>Досвіт роботи</h2></center>
             <img src="diana-vel.png" alt="diana-bike">
             <img src="diana-dance.png" alt="diana-danve">
             <img src="buka.png" alt="bukovel"><br>
@@ -53,7 +53,7 @@
         </section>
         <!--             Освіта                      -->
         <section>
-            <center><h2>Освіта</h2></center>
+            <center><h3>Освіта</h3></center>
             <img src="picture.png" alt="picture"><br>
             Львівська Лінгвістична Гімназія(ЛЛГ)
             З поглибленим вивченням англійської мови<br>
@@ -69,7 +69,7 @@
         </section>
         <!--                 Про Себе               -->
         <section>
-            <center><h2>Про себе</h2></center>
+            <center><h4>Про себе</h4></center>
             З самого малку я захоплювався баскетболом і грав за свою школу на протязі 5 років
         </section>
         <section>
