--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="uk">
     <head>
+        <link rel="stylesheet" href="css/style/css">
         <title>sample</title>
         <meta charset="utf-8">
-        <style>
-        body {
-            color: white;
-            background-color: black;
-        }
-        </style>
-    </head>
     <body>
         <header>
             <img src="tutylka.png" alt="title"><br>
