--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <meta charset="utf-8">
     <body>
         <header>
-            <img id="tutylka" src="tutylka.png" alt="title">
+            <img id="tutylka" src="foto/kolo.jpg" alt="title">
             <h1>Стегній Сергій</h1>
-            <audio src="sound.mp3" controls></audio>
+            <audio src="sound/sound.mp3" controls></audio>
         </header>
         <aside>
             <a href="https://www.facebook.com/profile.php?id=100010857879873"><img style="width: 15px; height: 15px;" 
-            src="facebook.svg" alt="facebook"></a>
-            <a href="https://vk.com/id39957133"><img style="width: 15px; height: 15px;" src="vk.png" alt="VK"></a>
-            <img style="width: 15px; height: 15px;" src="skype.png" alt="skype"><br>
+            src="sprite/facebook.svg" alt="facebook"></a>
+            <a href="https://vk.com/id39957133"><img style="width: 15px; height: 15px;" src="foto/vk.png" alt="vk.png"></a>
+            <img style="width: 15px; height: 15px;" src="foto/skype.png" alt="skype"><br>
             <nav>
                 <ul>
                     <li><a class="jakir" href="#">Досвід роботи</a></li>
@@ -26,8 +26,7 @@
         </aside>
         <!--               Головна                      -->
         <article>
-            <section class="table">
-                <table class="tabl">
+                <table class="table">
                     <tr class="sir">
                         <td class="black">Ім'я</td><td class="black">Сергій</td>
                     </tr>    
@@ -44,17 +43,17 @@
                         <td class="black">Емейл</td><td class="black">klamozxc@gmail.com</td>
                     </tr>  
                 </table>    
-            </section>
+
         </article>    
         <!--              Досвіт роботи                  -->
-        
+        <br><br><br><br><br><br>
         
         <footer>
             <section>
                 <h2>Досвіт роботи</h2>    
-                <img src="diana-vel.png" alt="diana-bike">
-                <img src="diana-dance.png" alt="diana-danve">
-                <img src="buka.png" alt="bukovel"><br>
+                <img src="foto/diana-vel.png" alt="diana-bike">
+                <img src="foto/diana-dance.png" alt="diana-danve">
+                <img src="foto/buka.png" alt="bukovel"><br>
                 <p>Холдинг емоцій !ФЕСТ: «Біля Діани»
                 Посада: офіціант</p><br>
 
@@ -70,7 +69,7 @@
         <!--             Освіта                      -->
             <section>
                 <h2>Освіта</h2>
-                <img src="picture.png" alt="picture"><br>
+                <img src="foto/picture.png" alt="picture"><br>
                 Львівська Лінгвістична Гімназія(ЛЛГ)
                 З поглибленим вивченням англійської мови<br>
 
