--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="css/style.css">
         <title>sample</title>
         <meta charset="utf-8">
+    </head>
     <body>
         <header>
             <img id="tutylka" src="foto/kolo.jpg" alt="title">
