--- a/page2.html
+++ b/page2.html
@@ -7,8 +7,17 @@
     </head>
     <body>
         <header>
-            
+            <nav>
+                <ul>
+                    <li><a class="jakir" href="index.html">Головна</a></li>
+                    <li><a class="jakir" href="page2.html">Досвід роботи</a></li>
+                    <li><a class="jakir" href="page3.html">Про себе</a></li>
+                    <li><a class="jakir" href="page4.html">Напишіть мені</a></li>
+                </ul>
+            </nav>
         </header>
+        <hr>
+        <article>
         <section id="education">
             <h2 id="head">Освіта</h2>
             <img src="foto/picture.png" alt="picture"><br>
@@ -42,16 +51,6 @@
             <p>Radisson Blu Resort
             Посада:бармен</p>
         </section>
-        <nav>
-            <section>
-                <ul>
-                    <li><a class="jakir" href="index.html">Головна</a></li>
-                    <li><a class="jakir" href="page2.html">Досвід роботи</a></li>
-                    <li><a class="jakir" href="page3.html">Про себе</a></li>
-                    <li><a class="jakir" href="page4.html">Напишіть мені</a></li>
-                </ul>
-            </section>    
-            <section>
-        </nav>
+        </article>
     </body>
 </html>
