--- a/page3.html
+++ b/page3.html
@@ -7,18 +7,19 @@
     </head>
     <body>
         <header>
-            <h2>Про себе</h2>
-        </header>    
-        <nav>
-            <section>
+            <nav>
                 <ul>
                     <li><a class="jakir" href="index.html">Головна</a></li>
                     <li><a class="jakir" href="page2.html">Досвід роботи</a></li>
                     <li><a class="jakir" href="page3.html">Про себе</a></li>
                     <li><a class="jakir" href="page4.html">Напишіть мені</a></li>
                 </ul>
-            </section>    
-        </nav>
+            </nav>
+        </header>
+        <hr>
+       <article>
+           <h2>Про себе</h2>
+       </article>
 
     </body>
 </html>
