--- a/index.html
+++ b/index.html
@@ -1,48 +1,65 @@
 <!DOCTYPE html>
 <html lang="uk">
-    <head>
-        <link rel="stylesheet" href="css/style.css">
-        <title>sample</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a class="jakir" href="index.html">Головна</a></li>
-                    <li><a class="jakir" href="page2.html">Досвід роботи</a></li>
-                    <li><a class="jakir" href="page3.html">Про себе</a></li>
-                    <li><a class="jakir" href="page4.html">Напишіть мені</a></li>
-                </ul>
-            </nav>
-            <audio src="sound/sound.mp3" controls></audio>
-        </header>
-        <hr>
-        <article>
-            <h1>Стегній Сергій</h1>
-            <img id="tutylka" src="foto/kolo.jpg" alt="title">
-            <table class="table">
-                <tr class="sir">
-                    <td class="black">Ім'я</td><td class="black">Сергій</td>
-                </tr>    
-                <tr>
-                    <td>Дата народження</td><td>7 листопада 1995р.</td>
-                </tr>
-                <tr class="sir">
-                    <td class="black">Адреса проживання</td><td class="black">Кирила і Мефодія 28/10</td>
-                </tr>
-                <tr>
-                    <td>Телефон</td><td>063-991-98-09</td>
-                </tr>
-                <tr class="sir">
-                    <td class="black">Емейл</td><td class="black">klamozxc@gmail.com</td>
-                </tr>  
-            </table>    
-        </article>    
-       
-    <script src="//code.jquery.com/jquery-3.1.0.min.js" 
-      integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" 
-      crossorigin="anonymous">    
-     </script> 
-    </body>    
+
+<head>
+    <title>sample</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/anim.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a class="jakir" href="index.html">Головна</a></li>
+                <li><a class="jakir" href="page2.html">Досвід роботи</a></li>
+                <li><a class="jakir" href="page3.html">Про себе</a></li>
+                <li><a class="jakir" href="page4.html">Напишіть мені</a></li>
+            </ul>
+            <ol>
+                <li>
+                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" alt="facebook" src="sprite/facebook.svg"></a>
+                </li>
+                <li>
+                    <a href="https://vk.com/id39957133"><img class="sprite" alt="vk" src="foto/vk.png"></a>
+                </li>
+            </ol>
+        </nav>
+    </header>
+    <hr>
+    <article>
+        <h1 class="animated fadeInDown">Стегній Сергій</h1>
+        <img id="tutylka" src="foto/kolo.jpg" alt="title">
+        <table class="table">
+            <tr class="sir">
+                <td class="black">Ім'я</td>
+                <td class="black">Сергій</td>
+            </tr>
+            <tr>
+                <td>Дата народження</td>
+                <td>7 листопада 1995р.</td>
+            </tr>
+            <tr class="sir">
+                <td class="black">Адреса проживання</td>
+                <td class="black">Кирила і Мефодія 28/10</td>
+            </tr>
+            <tr>
+                <td>Телефон</td>
+                <td>063-991-98-09</td>
+            </tr>
+            <tr class="sir">
+                <td class="black">Емейл</td>
+                <td class="black">klamozxc@gmail.com</td>
+            </tr>
+        </table>
+    </article>
+    <footer>
+        <audio src="sound/sound.mp3" controls></audio>
+    </footer>
+
+    <script src="//code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+</body>
+
 </html>
