--- a/page2.html
+++ b/page2.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html>
 <html lang="uk, en">
-    <head>
-        <meta charset="utf-8">
-        <title>Education</title>
-        <link rel="stylesheet" href="css/page2.css">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a class="jakir" href="index.html">Головна</a></li>
-                    <li><a class="jakir" href="page2.html">Досвід роботи</a></li>
-                    <li><a class="jakir" href="page3.html">Про себе</a></li>
-                    <li><a class="jakir" href="page4.html">Напишіть мені</a></li>
-                </ul>
-            </nav>
-        </header>
-        <hr>
-        <article>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Education</title>
+    <link rel="stylesheet" href="css/anim.css">
+    <link rel="stylesheet" href="css/page2.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a class="jakir" href="index.html">Головна</a></li>
+                <li><a class="jakir" href="page2.html">Досвід роботи</a></li>
+                <li><a class="jakir" href="page3.html">Про себе</a></li>
+                <li><a class="jakir" href="page4.html">Напишіть мені</a></li>
+            </ul>
+            <ol>
+                <li>
+                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" src="sprite/facebook.svg"></a>
+                </li>
+                <li>
+                    <a href="https://vk.com/id39957133"><img class="sprite" src="foto/vk.png"></a>
+                </li>
+            </ol>
+        </nav>
+    </header>
+    <hr>
+    <article>
         <section id="education">
-            <h2 id="head">Освіта</h2>
-            <img src="foto/picture.png" alt="picture"><br>
-            <p>Львівська Лінгвістична Гімназія(ЛЛГ)
-            З поглибленим вивченням англійської мови</p>
+            <h2 class="animated fadeInDown">Освіта</h2>
+            <p>Львівська Лінгвістична Гімназія(ЛЛГ) З поглибленим вивченням англійської мови</p>
 
-            <p>Технічний коледж Національного університету «Львівська Політехніка»
-            (ТКНУЛП)
-            Факультет програмне забезпечення</p>
+            <p>Технічний коледж Національного університету «Львівська Політехніка» (ТКНУЛП) Факультет програмне забезпечення</p>
 
-            <p>Національний університет «Львівська Політехніка»
-            (НУЛП)
-            Факультет комп'ютерні науки
-            Сьогодні навчаюсь на 2-курсі</p>
+            <p>Національний університет «Львівська Політехніка» (НУЛП) Факультет комп'ютерні науки Сьогодні навчаюсь на 2-курсі</p>
+            <img id="osvita" src="foto/DSC_4110.jpg" alt="picture">
         </section>
-       
+
         <section id="work">
-            <h2>Досвід роботи</h2>
-            <img src="foto/diana-vel.png" alt="diana-bike">a
-            <img src="foto/diana-dance.png" alt="diana-danve">
-            <img src="foto/buka.png" alt="bukovel"><br>
-            <p>Холдинг емоцій !ФЕСТ: «Біля Діани»
-            Посада: офіціант</p>
+            <h2 class="animated fadeInDown">Досвід роботи</h2>
+            <p>Холдинг емоцій !ФЕСТ: «Біля Діани» Посада: офіціант</p>
 
-            <p>Холдинг емоцій !ФЕСТ: «Біля Діани»
-            Посада: старший офіціант</p>
+            <p>Холдинг емоцій !ФЕСТ: «Біля Діани» Посада: старший офіціант</p>
 
-            <p>Холдинг емоцій !ФЕСТ: «Виїздний кейтерінг»
-            Посада: офіціант</p>
-            
-            <p>Radisson Blu Resort
-            Посада:бармен</p>
+            <p>Холдинг емоцій !ФЕСТ: «Виїздний кейтерінг» Посада: офіціант</p>
+
+            <p>Radisson Blu Resort Посада:бармен
+            </p>
+            <img id="bike" src="foto/di_bike.jpg" alt="diana-bike">
+            <img id="dance" src="foto/di_dance.jpg" alt="diana-danve">
+            <img id="buka" src="foto/buka.jpg" alt="bukovel">
         </section>
-        </article>
-    </body>
+    </article>
+</body>
+
 </html>
