--- a/page3.html
+++ b/page3.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="uk, en">
-    <head>
-        <meta charset="utf-8"></meta>
-        <title>About me</title>
-        <link rel="stylesheet" href="css/page3.css">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a class="jakir" href="index.html">Головна</a></li>
-                    <li><a class="jakir" href="page2.html">Досвід роботи</a></li>
-                    <li><a class="jakir" href="page3.html">Про себе</a></li>
-                    <li><a class="jakir" href="page4.html">Напишіть мені</a></li>
-                </ul>
-            </nav>
-        </header>
-        <hr>
-       <article>
-           <h2>Про себе</h2>
-       </article>
 
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About me</title>
+    <link rel="stylesheet" href="css/anim.css">
+    <link rel="stylesheet" href="css/page3.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a class="jakir" href="index.html">Головна</a></li>
+                <li><a class="jakir" href="page2.html">Досвід роботи</a></li>
+                <li><a class="jakir" href="page3.html">Про себе</a></li>
+                <li><a class="jakir" href="page4.html">Напишіть мені</a></li>
+            </ul>
+            <ol>
+                <li>
+                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" src="sprite/facebook.svg"></a>
+                </li>
+                <li>
+                    <a href="https://vk.com/id39957133"><img class="sprite" src="foto/vk.png"></a>
+                </li>
+            </ol>
+        </nav>
+    </header>
+    <hr>
+    <article>
+        <h2 class="animated fadeInDown">Про себе</h2>
+        <img class="foto" src="foto/prof.jpg" alt="foto">
+    </article>
+
+</body>
+
 </html>
