--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </ul>
             <ol>
                 <li>
-                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" alt="facebook" src="sprite/facebook.svg"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" alt="facebook" src="sprite/facebook.png"></a>
                 </li>
                 <li>
-                    <a href="https://vk.com/id39957133"><img class="sprite" alt="vk" src="foto/vk.png"></a>
+                    <a href="https://vk.com/id39957133"><img class="sprite" alt="vk" src="sprite/vk.png"></a>
                 </li>
             </ol>
         </nav>
@@ -56,7 +56,7 @@
         </table>
     </article>
     <footer>
-        <audio src="sound/sound.mp3" controls></audio>
+        <!--<audio src="sound/sound.mp3" controls></audio>-->
     </footer>
 
     <script src="//code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
