--- a/page3.html
+++ b/page3.html
@@ -20,10 +20,10 @@
             </ul>
             <ol>
                 <li>
-                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" src="sprite/facebook.svg"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" src="sprite/facebook.png"></a>
                 </li>
                 <li>
-                    <a href="https://vk.com/id39957133"><img class="sprite" src="foto/vk.png"></a>
+                    <a href="https://vk.com/id39957133"><img class="sprite" src="sprite/vk.png"></a>
                 </li>
             </ol>
         </nav>
