--- a/page4.html
+++ b/page4.html
@@ -20,10 +20,10 @@
             </ul>
             <ol>
                 <li>
-                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" src="sprite/facebook.svg"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" src="sprite/facebook.png"></a>
                 </li>
                 <li>
-                    <a href="https://vk.com/id39957133"><img class="sprite" src="foto/vk.png"></a>
+                    <a href="https://vk.com/id39957133"><img class="sprite" src="sprite/vk.png"></a>
                 </li>
             </ol>
         </nav>
@@ -34,11 +34,11 @@
         <h2 class="animated fadeInDown">Напишіть мені повідомлення</h2>
         <form action="https://formspree.io/klamozxc@gmail.com" method="POST">
             <label for="name"><span>Ім'я</span></label><br>
-            <input class="input" type="text" name="name" id="name" placeholder="...."><br>
-            <label for="surname"><span>Прізвище</span></label><br>
-            <input class="input" type="text" name="surname" id="surname" placeholder="...."><br>
+            <input class="input" type="text" name="name" id="name" placeholder="...." required><br>
+            <label for="email"><span>Емейл</span></label><br>
+            <input class="input" type="email" name="email" id="email" placeholder="...." required><br>
             <label for="text"><span>Повідомлення</span></label><br>
-            <textarea name="text" id="text" placeholder="Написати"></textarea><br><br>
+            <textarea name="text" id="text" placeholder="Написати" required></textarea><br><br>
             <input class="send buttom" type="submit" name="send" value="Надіслати"><br>
         </form>
     </section>
