--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/anim.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="foto/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 
 <body>
@@ -25,6 +27,9 @@
                 <li>
                     <a href="https://vk.com/id39957133"><img class="sprite" alt="vk" src="sprite/vk.png"></a>
                 </li>
+                <li>
+                    <a href="https://www.linkedin.com/profile/preview?locale=ru_RU&trk=prof-0-sb-preview-primary-button"><img class="sprite" src="sprite/linkedin.svg"></a>
+                </li>
             </ol>
         </nav>
     </header>
@@ -38,16 +43,16 @@
                 <td class="black">Сергій</td>
             </tr>
             <tr>
-                <td>Дата народження</td>
-                <td>7 листопада 1995р.</td>
+                <td class="fon">Дата народження</td>
+                <td class="fon">7 листопада 1995р.</td>
             </tr>
             <tr class="sir">
-                <td class="black">Адреса проживання</td>
-                <td class="black">Кирила і Мефодія 28/10</td>
+                <td class="black">Продивання</td>
+                <td class="black">м.Львів</td>
             </tr>
             <tr>
-                <td>Телефон</td>
-                <td>063-991-98-09</td>
+                <td class="fon">Телефон</td>
+                <td class="fon">063-991-98-09</td>
             </tr>
             <tr class="sir">
                 <td class="black">Емейл</td>
@@ -55,9 +60,6 @@
             </tr>
         </table>
     </article>
-    <footer>
-        <!--<audio src="sound/sound.mp3" controls></audio>-->
-    </footer>
 
     <script src="//code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 </body>
