--- a/page3.html
+++ b/page3.html
@@ -7,6 +7,8 @@
     <title>About me</title>
     <link rel="stylesheet" href="css/anim.css">
     <link rel="stylesheet" href="css/page3.css">
+    <link rel="icon" type="image/x-icon" href="foto/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 
 <body>
@@ -25,6 +27,9 @@
                 <li>
                     <a href="https://vk.com/id39957133"><img class="sprite" src="sprite/vk.png"></a>
                 </li>
+                <li>
+                    <a href="https://www.linkedin.com/profile/preview?locale=ru_RU&trk=prof-0-sb-preview-primary-button"><img class="sprite" src="sprite/linkedin.svg"></a>
+                </li>
             </ol>
         </nav>
     </header>
@@ -32,6 +37,10 @@
     <article>
         <h2 class="animated fadeInDown">Про себе</h2>
         <img class="foto" src="foto/prof.jpg" alt="foto">
+        <p>Привіт всім, розовім трішки про себе</p>
+        <p>Проживаю у місті Львові, з дитинства дуже захоплювався баскетболом яким і займався на протязі шести років.
+        Також охочий до подорожів, з радістю готовий побачити щось нове. Останнім часом дуже захопився програмуванням
+        і стараюсь розвиватись у цьому руслі.</p>
     </article>
 
 </body>
