--- a/page2.html
+++ b/page2.html
@@ -7,6 +7,8 @@
     <title>Education</title>
     <link rel="stylesheet" href="css/anim.css">
     <link rel="stylesheet" href="css/page2.css">
+    <link rel="icon" type="image/x-icon" href="foto/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 
 <body>
@@ -24,6 +26,9 @@
                 </li>
                 <li>
                     <a href="https://vk.com/id39957133"><img class="sprite" src="sprite/vk.png"></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/profile/preview?locale=ru_RU&trk=prof-0-sb-preview-primary-button"><img class="sprite" src="sprite/linkedin.svg"></a>
                 </li>
             </ol>
         </nav>
