--- a/page3.html
+++ b/page3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk, en">
+<html lang="uk">
 
 <head>
     <meta charset="utf-8">
@@ -22,13 +22,13 @@
             </ul>
             <ol>
                 <li>
-                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" src="sprite/facebook.png"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" alt="facebook" src="sprite/facebook.png"></a>
                 </li>
                 <li>
-                    <a href="https://vk.com/id39957133"><img class="sprite" src="sprite/vk.png"></a>
+                    <a href="https://vk.com/id39957133"><img class="sprite" alt="vk" src="sprite/vk.png"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/profile/preview?locale=ru_RU&trk=prof-0-sb-preview-primary-button"><img class="sprite" src="sprite/linkedin.svg"></a>
+                    <a href="https://www.linkedin.com/profile/preview?locale=ru_RU&trk=prof-0-sb-preview-primary-button"><img class="sprite" alt="linked" src="sprite/linkedin.svg"></a>
                 </li>
             </ol>
         </nav>
