--- a/page4.html
+++ b/page4.html
@@ -22,13 +22,13 @@
             </ul>
             <ol>
                 <li>
-                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" src="sprite/facebook.png"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100010857879873"><img class="sprite" alt="facebook" src="sprite/facebook.png"></a>
                 </li>
                 <li>
-                    <a href="https://vk.com/id39957133"><img class="sprite" src="sprite/vk.png"></a>
+                    <a href="https://vk.com/id39957133"><img class="sprite" alt="vk" src="sprite/vk.png"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/profile/preview?locale=ru_RU&trk=prof-0-sb-preview-primary-button"><img class="sprite" src="sprite/linkedin.svg"></a>
+                    <a href="https://www.linkedin.com/profile/preview?locale=ru_RU&trk=prof-0-sb-preview-primary-button"><img class="sprite" alt="linked" src="sprite/linkedin.svg"></a>
                 </li>
             </ol>
         </nav>
@@ -47,6 +47,9 @@
             <input class="send buttom" type="submit" name="send" value="Надіслати"><br>
         </form>
     </section>
+    <footer>
+         <p id="copy">Copyright &copy; Sergii Stegnii 2016</p>
+    </footer>
 </body>
 
 </html>
