--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="https://vk.com/id39957133"><img class="sprite" alt="vk" src="sprite/vk.png"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/profile/preview?locale=ru_RU&trk=prof-0-sb-preview-primary-button"><img class="sprite" src="sprite/linkedin.svg"></a>
+                    <a href="https://www.linkedin.com/profile/preview?locale=ru_RU&trk=prof-0-sb-preview-primary-button"><img class="sprite" alt="linked" src="sprite/linkedin.svg"></a>
                 </li>
             </ol>
         </nav>
