--- a/page3.html
+++ b/page3.html
@@ -41,6 +41,7 @@
         <p>Проживаю у місті Львові, з дитинства дуже захоплювався баскетболом яким і займався на протязі шести років.
         Також охочий до подорожів, з радістю готовий побачити щось нове. Останнім часом дуже захопився програмуванням
         і стараюсь розвиватись у цьому руслі.</p>
+        <p>Навички HTML: 45%  CSS: 40% JS: 30%  І це лише початок=)</p>
     </article>
 
 </body>
